--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <h1>Baskaran Ajiharan</h1>
         <h2>Software Developer</h2>
         <a
-          href="https://firebasestorage.googleapis.com/v0/b/tinder-clone-app-c8b4e.appspot.com/o/images%2FAjiharan1.pdf?alt=media&token=59c70ad0-4e83-4ef5-be0a-7ef1c4c9bad1"
+          href="https://firebasestorage.googleapis.com/v0/b/fir-store-react.appspot.com/o/cv%2FAJIHARAN_CV.pdf?alt=media&token=a0364cb2-3803-4796-9a44-06e49dd7c9d9"
           target="_blank"
           class="btn-rounded-white"
           >Download Resume</a
