--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <h1>Baskaran Ajiharan</h1>
         <h2>Software Developer</h2>
         <a
-          href="https://firebasestorage.googleapis.com/v0/b/fir-store-react.appspot.com/o/cv%2FAJIHARAN_CV.pdf?alt=media&token=a0364cb2-3803-4796-9a44-06e49dd7c9d9"
+          href="https://firebasestorage.googleapis.com/v0/b/fir-store-react.appspot.com/o/cv%2FBaskaran%20Ajiharan.pdf?alt=media&token=5f6c9aa2-3e9d-4ea5-9e4d-d88251d7930a"
           target="_blank"
           class="btn-rounded-white"
           >Download Resume</a
