--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
     <div id="lead">
       <div id="lead-content">
-        <h1>Baskaran Ajiharan</h1>
+        <h1>Ajiharan Baskaran</h1>
         <h2>Software Developer</h2>
         <a
           href="https://firebasestorage.googleapis.com/v0/b/fir-store-react.appspot.com/o/cv%2FBaskaran%20Ajiharan.pdf?alt=media&token=5f6c9aa2-3e9d-4ea5-9e4d-d88251d7930a"
@@ -85,8 +85,7 @@
               coding, open source, and the web and mobile platform ❤️. Aside
               from my job, I like to create and contribute to open source
               projects. That helps me to learn a ton of new stuff, grow as a
-              developer and support other open source projects. Also I want to
-              work on machine learning project in future.
+              developer and support other open source projects.
             </p>
           </div>
         </div>
@@ -99,7 +98,7 @@
       <div id="experience-timeline">
         <div data-date="October 2020 – April 2021">
           <h3>Baskaran Ajiharan</h3>
-          <h4>Software Developer</h4>
+          <h4>Software Engineer Intern</h4>
           <p>Worked as a software developer in Unicom sd(pvt ltd)</p>
         </div>
 
@@ -107,6 +106,12 @@
           <h3>Baskaran Ajiharan</h3>
           <h4>Full stack developer</h4>
           <p>Worked as a part time full stack developer</p>
+        </div>
+
+        <div data-date="January 2022 – May 2022">
+          <h3>Baskaran Ajiharan</h3>
+          <h4>Associate Software Engineer</h4>
+          <p>Worked as a full time employee on OrangeHrm</p>
         </div>
       </div>
     </div>
