--- a/index.html
+++ b/index.html
@@ -587,6 +587,8 @@
         <li>PYTHON</li>
         <li>NODEJS</li>
         <li>ANGULAR</li>
+        <li>VUE</li>
+        <li>WEBPACK</li>
         <li>REACT</li>
         <li>JAVA</li>
         <li>C</li>
@@ -606,7 +608,6 @@
         <li>FLUTTER</li>
         <li>MONGODB</li>
         <li>MYSQL</li>
-        <li>MACHINE LEARNING</li>
         <li>JIRA</li>
         <li>AZURE DEVOPS</li>
       </ul>
